--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="questioncontainer">
                 <h4 class="question">Lequel de ces producteurs n'est pas affilié au genre UK Garage ?</h4>
                     <div>
-                        <input type="radio" id="InterplantetaryCriminal" name="q5" value="a" checked>
+                        <input type="radio" id="InterplanetaryCriminal" name="q5" value="a" checked>
                         <label for="InterplantetaryCriminal">InterplantetaryCriminal</label>
                     </div>
                     <div>
