faute de frappe

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h4 class="question">Lequel de ces producteurs n'est pas affilié au genre UK Garage ?</h4>
                     <div>
                         <input type="radio" id="InterplanetaryCriminal" name="q5" value="a" checked>
-                        <label for="InterplantetaryCriminal">InterplantetaryCriminal</label>
+                        <label for="InterplanetaryCriminal">InterplanetaryCriminal</label>
                     </div>
                     <div>
                         <input type="radio" id="Holloway" name="q5" value="b">
